# dspsr

./: .gitignore  CITATION  Doxyfile  Makefile.am  available.backends  bootstrap  configure.ac  configure.in  greps  update
Benchmark/: all.csh  (+13 more)
Kernel/Applications/: Makefile.am  digihdr.C  load_bits.C  sigproc_header.C  test_Input.C  test_MPIRoot.C  test_SetBufferingPolicy.C  test_Unpack.C
Kernel/Classes/: ASCIIObservation.C  BitSeries.C  BitTable.C  BitUnpacker.C  BlockFile.C  ChannelOrder.C  CloneArchive.C  CommandLineHeader.C  DADAFile.C  DataSeries.C  Digitizer.C  DummyFile.C  EightBitUnpacker.C  ExcisionBitUnpacker.C  ExcisionUnpacker.C  File.C  FloatUnpacker.C  FourBitUnpacker.C  GenericEightBitUnpacker.C  GenericEightBitUnpackerCUDA.cu  GenericFourBitUnpacker.C  HistUnpacker.C  IOManager.C  Input.C  InputBuffering.C  InputBufferingShare.C  MPIRoot.C  MPIServer.C  MPITrans.C  Makefile.am  Memory.C  MemoryCUDA.C  MultiFile.C  Multiplex.C  NLowLookup.C  Observation.C  ObservationChange.C  ObservationInterface.C  Operation.C  OperationThread.C  (+37 more)
Kernel/Classes/dsp/: ASCIIObservation.h  BitSeries.h  BitTable.h  BitUnpacker.h  BlockFile.h  BlockIterator.h  BufferingPolicy.h  ChannelOrder.h  CloneArchive.h  CommandLineHeader.h  DADAFile.h  DataSeries.h  DataSource.h  Digitizer.h  DummyFile.h  EightBitOne.h  EightBitUnpacker.h  ExcisionBitUnpacker.h  ExcisionUnpacker.h  File.h  FloatUnpacker.h  FourBitTwo.h  FourBitUnpacker.h  GenericEightBitUnpacker.h  GenericEightBitUnpackerCUDA.h  GenericFourBitUnpacker.h  HasInput.h  HasOutput.h  HistUnpacker.h  IOManager.h  Input.h  InputBuffering.h  InputBufferingShare.h  MPIRoot.h  MPIServer.h  MPITrans.h  Memory.h  MemoryCUDA.h  MiniExtension.h  MiniPlan.h  (+40 more)
Kernel/Formats/: File_registry.C  Makefile.am  Unpacker_registry.C
Kernel/Formats/apsr/: APSREightBit.C  APSRFourBit.C  APSRIterator.C  APSRTwoBitCorrection.C  Makefile.am  apsr_unpack.C  apsr_unpack.h
Kernel/Formats/asp/: ASPFile.C  ASPUnpacker.C  Makefile.am  asp_params.h  data2rcv.h
Kernel/Formats/bcpm/: BCPMExtension.C  BCPMFile.C  BCPMUnpacker.C  Makefile.am  indexx.f  test_header.c
Kernel/Formats/bpsr/: BPSRCrossUnpacker.C  BPSRUnpacker.C  Makefile.am
Kernel/Formats/caspsr/: CASPSRSingleUnpacker.C  CASPSRUnpacker.C  CASPSRUnpackerCUDA.cu  CASPSRUnpackerSetup.C  Makefile.am
Kernel/Formats/cpsr/: CPSRFile.C  CPSRTwoBitCorrection.C  Makefile.am  class.h  ffd.h  mjd.C  pspm++.h  pspm.C  pspmDbase.C  pspmDbase.h  pspmDbaseCreate.C  pspm_search_header.h  quadruple.h
Kernel/Formats/cpsr2/: CPSR2File.C  CPSR2TwoBitCorrection.C  CPSR2_Observation.C  Makefile.am  cpsr2_change_header.C  cpsr2_header.h  cpsr2head.C  yamasaki_verify.C  yamasaki_verify.h
Kernel/Formats/dada/: DADABuffer.C  Makefile.am
Kernel/Formats/dummy/: DummyFile.C  DummyFourBit.C  DummyUnpacker.C  Makefile.am
Kernel/Formats/emerlin/: EmerlinFile.C  EmerlinTwoBitTable.C  EmerlinUnpacker.C  Makefile.am  vdifio.h
Kernel/Formats/fadc/: FadcFile.C  FadcObservation.C  FadcTwoBitCorrection.C  FadcUnpacker.C  Makefile.am  fadc_header.c  fadc_header.h
Kernel/Formats/fits/: FITSDigitizer.C  FITSFile.C  FITSOutputFile.C  FITSUnpacker.C  GUPPIFITSUnpacker.C  Makefile.am  fits_params.h  psrfitsio.C
Kernel/Formats/gmrt/: GMRTBinaryFile.C  GMRTFile.C  GMRTFilterbank16.C  GMRTFilterbankFile.C  GMRTFourBit.C  GMRTUnpacker.C  Makefile.am  data2rcv.h  gmrt.c  gmrt.h  gmrt_params.h
Kernel/Formats/guppi/: GUPPIBlockFile.C  GUPPIBuffer.C  GUPPIFile.C  GUPPIFourBit.C  GUPPITwoBitCorrection.C  GUPPITwoBitCorrectionComplex.C  GUPPIUnpacker.C  Makefile.am  fitshead_utils.C  fitshead_utils.h
Kernel/Formats/kat/: KAT7Unpacker.C  KAT7UnpackerCUDA.cu  Makefile.am  MeerKATUnpacker.C  MeerKATUnpackerCUDA.cu
Kernel/Formats/lbadr/: Makefile.am  SMRO.h  SMROFile.C  SMROTwoBitCorrection.C  lbastats.C
Kernel/Formats/lbadr64/: LBADR64_File.C  LBADR64_TwoBitCorrection.C  Makefile.am  lba64stats.C  lbadr64_fix.C
Kernel/Formats/lofar_dal/: LOFAR_DALFile.C  LOFAR_DALUnpacker.C  Makefile.am  list
Kernel/Formats/lump/: LuMPFile.C  LuMPObservation.C  LuMPUnpacker.C  MPIfR_Real16_t.C  MPIfR_Real16_t.h  Makefile.am  lump_internals.h
Management/: Makefile.am  developer  dspsr_cflags.in  dspsr_ldflags.in  merge  release.csh.in
More/Applications/: Makefile.am  searchplot.C
More/Plotting/: FrequencyVsTime.C  HistoPlot.C  Makefile.am  Plot.C  PlotFactory.C
Signal/General/: ACFilterbank.C  Accumulation.C  AccumulationCUDA.cu  Accumulator.C  Apodization.C  AutoCorrelation.C  Bandpass.C  BandpassMonitor.C  BitStatsPlotter.C  CUFFTError.C  CUFFTError.h  ChannelSummer.f  Chomper.C  ConstantRescale.C  Convolution.C  ConvolutionCUDA.cu  ConvolutionCUDACallbacks.cu  ConvolutionCUDASpectral.cu  Dedispersion.C  DedispersionHistory.C  DedispersionSampleDelay.C  DetectCUDA.cu  Detection.C  DetectionCUDA.cu  Doxyfile  Dump.C  ExcisionStatsPlotter.C  FScrunch.C  FScrunchCUDA.cu  FZoom.C  FZoomCUDA.cu  Filterbank.C  FilterbankBench.C  FilterbankCUDA.C  FilterbankCUDA.cu  FilterbankConfig.C  FourierDigitizer.C  FourierDigitizerCUDA.cu  FourthMoment.C  GeometricDelay.C  (+85 more)
Signal/Pulsar/: Archiver.C  ArchiverExtensions.C  CyclicFold.C  CyclicFoldEngineCUDA.cu  Fold.C  FoldCUDA.cu  LoadToFold1.C  LoadToFoldConfig.C  LoadToFoldN.C  Makefile.am  PhaseLockedFilterbank.C  PhaseSeries.C  PhaseSeriesUnloader.C  SubFold.C  TimeDivide.C  TransferPhaseSeriesCUDA.C  UnloaderShare.C  dsp_verbosity.C  dspsr.C  simple_Archiver.C  test_Archiver.C  test_Fold.C
Signal/Statistics/: Makefile.am  PearsonIV.C  SKLimits.C  sk_distrib_plot.C  sk_limit_plot.C  sklimit.C  test_NewtonRaphson.C  test_Romberg.C
config/: Makefile.am  Makefile.backends  Makefile.cuda  Makefile.extended  Makefile.install  Makefile.psrchive  Makefile.standard  affinity.m4  ax_hdf5.m4  ax_openmp.m4  backends.default  compiler.m4  cuda.m4  cudalt.py  cufft.m4  cvshome  debug.m4  fftw.m4  formats.m4  formats.sh  getopt_long.m4  guppi_daq.m4  ipp.m4  local_root  mark5access.m4  mkl.m4  mpi.m4  pgplot.m4  presto.m4  psrchive.m4  psrdada.m4  psrxml.m4
python/: Makefile.am  dspsr.i  example.py
(+384 files in other folders)
