
noinst_LTLIBRARIES = libFormats.la

libFormats_la_SOURCES = File_registry.C Unpacker_registry.C

DIST_SUBDIRS =  apsr asp bcpm cpsr cpsr2 dada fadc gmrt \
		lbadr lbadr64 mark4 mark5 maxim mini mwa \
		pmdaq puma puma2 s2 spigot wapp

#############################################################################
#

include $(top_srcdir)/config/Makefile.bootstrap

include $(top_srcdir)/config/Makefile.include

